// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DOM snapshots SLDSBrandBand Default (medium) 1`] = `
<div
  style={
    Object {
      "bottom": "1rem",
      "left": "1rem",
      "overflow": "auto",
      "position": "absolute",
      "right": "1rem",
      "top": "1rem",
    }
  }
>
  <div
    className="slds-brand-band slds-brand-band_medium"
    id="brand-band-default"
  />
</div>
`;

exports[`DOM snapshots SLDSBrandBand Group Image 1`] = `
<div
  style={
    Object {
      "bottom": "1rem",
      "left": "1rem",
      "overflow": "auto",
      "position": "absolute",
      "right": "1rem",
      "top": "1rem",
    }
  }
>
  <div
    className="slds-brand-band slds-brand-band_medium slds-brand-band_group"
    id="brand-band-user-group"
  />
</div>
`;

exports[`DOM snapshots SLDSBrandBand Image with background size cover 1`] = `
<div
  style={
    Object {
      "bottom": "1rem",
      "left": "1rem",
      "overflow": "auto",
      "position": "absolute",
      "right": "1rem",
      "top": "1rem",
    }
  }
>
  <div
    className="slds-brand-band slds-brand-band_large slds-brand-band_cover custom-brand-band-class"
    id="brand-band-large"
  >
    <span
      className="slds-assistive-text"
    >
      Hello World!
    </span>
  </div>
</div>
`;

exports[`DOM snapshots SLDSBrandBand Large 1`] = `
<div
  style={
    Object {
      "bottom": "1rem",
      "left": "1rem",
      "overflow": "auto",
      "position": "absolute",
      "right": "1rem",
      "top": "1rem",
    }
  }
>
  <div
    className="slds-brand-band slds-brand-band_large custom-brand-band-class"
    id="brand-band-large"
  >
    <span
      className="slds-assistive-text"
    >
      Hello World!
    </span>
  </div>
</div>
`;

exports[`DOM snapshots SLDSBrandBand No Image 1`] = `
<div
  style={
    Object {
      "bottom": "1rem",
      "left": "1rem",
      "overflow": "auto",
      "position": "absolute",
      "right": "1rem",
      "top": "1rem",
    }
  }
>
  <div
    className="slds-brand-band slds-brand-band_medium slds-brand-band_none"
    id="brand-band-no-image"
    style={
      Object {
        "backgroundColor": "#eef4ff",
        "zIndex": 1,
      }
    }
  />
</div>
`;

exports[`DOM snapshots SLDSBrandBand Small 1`] = `
<div
  style={
    Object {
      "bottom": "1rem",
      "left": "1rem",
      "overflow": "auto",
      "position": "absolute",
      "right": "1rem",
      "top": "1rem",
    }
  }
>
  <div
    className="slds-brand-band slds-brand-band_small"
    id="brand-band-small"
  />
</div>
`;

exports[`DOM snapshots SLDSBrandBand User Image 1`] = `
<div
  style={
    Object {
      "bottom": "1rem",
      "left": "1rem",
      "overflow": "auto",
      "position": "absolute",
      "right": "1rem",
      "top": "1rem",
    }
  }
>
  <div
    className="slds-brand-band slds-brand-band_medium slds-brand-band_user"
    id="brand-band-user-image"
  />
</div>
`;
